# kindred-services

./: .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml
auth/: Cargo.toml  Dockerfile  README.md  diesel.toml
auth/migrations/2025-01-09-005709_sessions/: up.sql
auth/migrations/2025-01-10-051210_rbac_profiles/: down.sql  up.sql
auth/migrations/2025-01-10-051258_role_assignments/: down.sql  up.sql
auth/migrations/2025-01-10-051515_profile_denied_permissions/: down.sql
auth/migrations/2025-01-10-051516_users/: up.sql
auth/migrations/2025-01-11-021022_permissions/: up.sql
auth/migrations/2025-01-11-021032_roles/: up.sql
auth/migrations/2025-01-11-021044_auth_users/: up.sql
auth/migrations/2025-01-11-021044_users/: up.sql
auth/migrations/2025-01-11-021045_rbac_profiles/: up.sql
auth/migrations/2025-01-11-021050_sessions/: up.sql
auth/migrations/2025-01-11-021057_role_assignments/: up.sql
auth/migrations/2025-01-11-021108_profile_permissions/: down.sql  up.sql
auth/migrations/2025-01-11-021130_profile_denied_permissions/: up.sql
auth/migrations/2025-01-11-022448_user_permissions/: up.sql
auth/migrations/2025-01-11-023313_role_permissions/: up.sql
auth/src/: main.rs  schema.rs
auth/src/api/: auth.rs  doctor.rs  laravel.rs  mod.rs  profile.rs  rbac.rs
auth/src/config/: config.rs
auth/src/db/: db.rs
auth/src/helper/: helper.rs  utils.rs
auth/src/laravel/: auth.rs  doctor.rs  mod.rs  profile.rs
auth/src/models/: auth.rs  laravel.rs  mod.rs  rbac.rs  request.rs  response.rs  users.rs
auth/src/repository/: auth.rs  mod.rs  rbac.rs
auth/src/repository/laravel/: handler.rs  mod.rs  profile.rs
auth/src/repository/postgres/: auth.rs  rbac.rs
auth/src/routes/: auth.rs
auth/src/seeders/: mod.rs  seed_db.rs
auth/src/utils/: helper.rs
vaccine/: .gitignore  Cargo.toml  Dockerfile  diesel.toml
vaccine/migrations/2025-01-13-060050_health_services/: up.sql
vaccine/migrations/2025-01-20-060658_product_types/: down.sql  up.sql
vaccine/migrations/2025-01-20-062036_clinic_services/: up.sql
vaccine/migrations/2025-01-20-062520_clinic_service_time_slots/: down.sql  up.sql
vaccine/migrations/2025-01-20-063259_clinics/: down.sql  up.sql
vaccine/migrations/2025-01-20-064508_service_appointments/: down.sql  up.sql
vaccine/migrations/2025-01-21-014716_health_services/: down.sql  up.sql
vaccine/migrations/2025-01-21-020125_clinics/: up.sql
vaccine/migrations/2025-01-21-020217_clinic_services/: down.sql  up.sql
vaccine/migrations/2025-01-21-020234_clinic_service_time_slots/: up.sql
vaccine/migrations/2025-01-21-021104_health_service_variants/: down.sql  up.sql
vaccine/migrations/2025-01-21-021303_service_appointments/: up.sql
vaccine/src/: main.rs  schema.rs
vaccine/src/api/v1/: mod.rs
vaccine/src/api/v1/config/: config.rs
vaccine/src/api/v1/controllers/: cities_controller.rs  clinic_services_controller.rs  health_service_variants_controller.rs  health_services.rs  mod.rs  product_types_controller.rs  service_appointments_controller.rs  time_slots_controller.rs
vaccine/src/api/v1/db/: database.rs
vaccine/src/api/v1/middleware/: authentication.rs  logger.rs  mod.rs
vaccine/src/api/v1/models/: cities_model.rs  clinic_services_model.rs  clinics_model.rs  health_service_variants_model.rs  health_services_model.rs  mod.rs  product_types_model.rs  response_model.rs  service_appointments_model.rs  time_slots_model.rs
vaccine/src/api/v1/repositories/: cities_repository.rs  clinic_services_repository.rs  health_service_variants_repository.rs  health_services_repository.rs  mod.rs  product_types_repository.rs  service_appointments_repository.rs  time_slots_repository.rs
vaccine/src/api/v1/routes/: cities_route.rs  health_service_types_route.rs  health_services_route.rs  routes.rs
vaccine/src/api/v1/seeders/: health_service_variants_seeder.rs  health_services_seeder.rs  mod.rs  product_types_seeder.rs  seeders.rs
(+18 files in other folders)
