[package]
name = "kindred-services"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = "0.19"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.15.0"
diesel = { version = "2.0", features = ["postgres", "serde_json"] }
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tokio = { version = "1.41.1", features = ["full"] }
futures-util = "0.3"
tower = "0.4"
hyper = { version = "0.14", features = ["full"] }
axum-server = "0.7.1"
tokio-postgres = "0.7.12" 