[package]
name = "kindred-services"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
serde = "1.0"
serde_derive = "1.0"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
actix-service = "2.0" 
tokio = { version = "1", features = ["full"] }
actix-rt = "2.5"  
futures = "0.3"