[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-service = "2.0.2"
actix-web = "4.9.0"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
diesel = { version = "2.2.0", features = ["postgres", "chrono", "uuid"] }
password-hash = "0.5.0"
argon2 = "0.5.3"
anyhow = "1.0.95"
validator = { version = "0.19", features = ["derive"] }

[[bin]]
name = "auth"
path = "src/main.rs"
