[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-service = "2.0.2"
actix-web = "4.9.0"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
diesel = { version = "2.2.0", features = ["postgres", "chrono", "uuid", "64-column-tables"] }
password-hash = "0.5.0"
argon2 = "0.5.3"
anyhow = "1.0.95"
validator = { version = "0.19", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.135"
regex = "1.11.1"
scraper = "0.22.0"
clap = { version = "4.5.27", features = ["derive"] }

[[bin]]
name = "auth"
path = "src/main.rs"
